k8s/base/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  type: ClusterIP

  selector:
    app: digital-banking-backend

  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
