k8s/base/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: NodePort

  selector:
    app: digital-banking-frontend

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
